# ProyectoTAC

./: CMakeLists.txt  Schnorr.h  main.cc  parties.txt  party.h
